# noise-generator-rust-on-pi-pico

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: main.rs
filter_design/: design_100hz_band_stop.py  filter_design.py
src/: lib.rs  main.rs
